--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<exec.mainClass>dad.calculadoraFXML.app.Main</exec.mainClass>
+		<exec.mainClass>dad.enviarEmail.app.Main</exec.mainClass>
 	</properties>
 
 	<dependencies>
